--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Race-Gofer</string>
+    <string name="icon_new">New Icon</string>
 </resources>
