--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">Race-Gofer</string>
     <string name="icon_new">New Icon</string>
+    <string name="site">www.racegofer.com</string>
+    <string name="api_create_race">/api/CreateRace?</string>
 </resources>
