Add manager icon Add 10 minute update icon Start race functionality

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="race_info">Race Information</string>
     <string name="leave_race">Leave Race</string>
     <string name="delete_race">Delete Race</string>
+    <string name="start_race">Start Race</string>
     <string name="site">www.racegofer.com</string>
     <string name="api_create_race">/api/CreateRace?</string>
 </resources>
